<resources>
    <string name="app_name">Discount</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="mobile_number">phone</string>
    <string name="or">or</string>
    <string name="medicine_category_name">Medicine Categories List</string>
    <string name="category_name">Product Categories</string>
    <string name="add_Rx">Capture Prescription</string>
    <string name="find_generic">Generic</string>
    <string name="fill_field">fill all field</string>
    <string name="fill_all_required">Please fill all the required fields</string>
    <string name="dos_reminder">Dose reminder</string>
    <string name="error_login">Your phone or Password incorrect </string>
    <string name="error">Some Error</string>
    <string name="not_receving">Didn\'t get your code?</string>
    <string name="resend_otp">Resend it</string>
    <string name="invalid_otp">Invalid OTP Number</string>
    <string name="enter_sms_otp">We\'ve sent a verification code to your mobile SMS , please enter it below</string>
    <string name="language">Change Language</string>
    <string name="register_now">Register now</string>
    <string name="dont_have_account">do not have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="aboutUs">About Us</string>
    <string name="have_account">Have You Account</string>
    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="m_categories">Categories</string>
    <string name="manufactures">Manufactures</string>
    <string name="myProduct">MyProducts</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="alarm">Dose Reminder</string>
    <string name="setting">Setting</string>
    <string name="help">Help </string>
    <string name="condition">Term and condition</string>
    <string name="privacy">Privacy Policy</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="searches">Search for Product</string>
    <string name="visitor">Visitor</string>

    <string name="share">Share</string>
    <string name="offers">Offers</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="sd">SDG</string>
    <string name="soon">Soon</string>
    <string name="full_name">Full Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="dose_from">Dose From</string>
    <string name="indication_usage">Indication/Usage</string>
    <string name="side_effect">Side Effect</string>
    <string name="dose">Dose</string>
    <string name="active_ingredient">Active Ingredient</string>
    <string name="interactions">Interactions</string>
    <string name="buy_now">Buy Now</string>
    <string name="more">More</string>
    <string name="user_profile">User Profile</string>
    <string name="order_now">Order Now</string>
    <string name="drug">Drug</string>
    <string name="product">Product</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="okey">Ok</string>
    <string name="operation_completed">Your request has been completed</string>
    <string name="you_will_be_contacted">You will be contacted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="electronic_payment">Electronic Payment</string>
    <string name="payment_method">Payment Method</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="_1_product_were_added_to_your_cart">Added to Cart</string>
    <string name="to_report_any_suggestions_and_complaints_please_contact_us">If you have any problem using the application please email us or call our hotline:</string>
    <string name="call_us">Call Us</string>
    <string name="send_message">Send Message</string>
    <string name="version">Version</string>
    <string name="by_registering_you_agree">By registering ,you agree on all <a href="http://shayoub.com/discount-term/privacy-and-policy-en.html">privacy and policy</a></string>
    <string name="by_clicking_on_this_option_you_agree_to_our_privacy_and_policy">By clicking on this option ,you agree to our<a href="http://shayoub.com/discount-term/privacy-and-policy-en.html"> privacy and policy</a></string>
    <string name="agree">Agree to our term and conditions</string>
    <string name="verify_account">Verify Account</string>
    <string name="aboutText">Discount is a mobile app that offers a free service , It mainly allows you to find your medications and healthcare medications Products in our Pharmacy.With just 3 clicks,you are able to :</string>
    <string name="aboutText2">- Register a new account using your Phone number.\n- Scan your prescription or search inside Discount database for the needed medications products.\n- Send order to our pharmacy.</string>
    <string name="sendVia">Hey, I am using discount app to order medicines online. Download it here:</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="get_location">Get Location</string>
    <string name="get_custom_location">Get Custom Location</string>
    <string name="note">Write a comment(optional)</string>
    <string name="other_phone_optional">other phone(optional)</string>
    <string name="try_agin">Try Again</string>
    <string name="should">you should Login to get the order</string>
    <string name="should_option">you should Login to get this option</string>
    <string name="recomed">Do you recommend an instance</string>
    <string name="check_location">Check yor Location</string>
    <string name="otp_sended">The Code has be send</string>
    <string name="the_phone_registred">The Phone Number already Registered</string>
    <string name="expires">Expires</string>
    <string name="state_city_street">State - City - street</string>
    <string name="status">Status :</string>
    <string name="drug_count">Drug Count</string>
    <string name="order_number">Order Number :</string>
    <string name="product_count">Product Count</string>
    <string name="prescriptions_count">Prescriptions Count</string>
    <string name="errer_phone_message">Invalid Phone Number</string>
    <string name="error_address">It must contain at least 10 characters</string>
    <string name="choose_location">You must choose your current \nlocation or residential area</string>
    <string name="no_internet">No Internet Found</string>
    <string name="hello">Welcome back</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="alarm_for">Alarm for</string>
    <string name="alarm_for2">is set successfully</string>
    <string name="add_now">Add Now</string>
    <string name="choose_day">It must choose day</string>
    <string name="dose_quantity">Dose Quantity</string>
    <string name="enter_medicine_name">Enter Medicine Name</string>
    <string name="choose_two_day">It must choose day at least 2 days</string>
    <string name="old_password">Current Password</string>
    <string name="new_passward">New Password</string>
    <string name="re_passward">Re-type Password</string>
    <string name="change_password">Change Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="forget_passwordAc">Forget Password</string>
    <string name="clicK_next">to get new password please enter your phone number to receive verify code</string>
    <string name="next">Next</string>
    <string name="passChange">Password has been changed Successfully</string>
    <string name="wrong">Wrong Password</string>
    <string name="pass_match">Password does not Match</string>
    <string name="set_pass">Set New Password</string>
    <string name="unvalid">Phone Number is incorrect</string>
    <string name="please_consult_your_physician_before_putin_tis_medicine">Please consult your physician before putin tis medicine</string>
    <string name="remove_cart">Are you sure to remove</string>
    <string name="cart">from the cart</string>

</resources>