<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".local.ui.anonymouse.OtpActivity">

    <RelativeLayout
        android:id="@+id/otp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/cairo_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/otp_account"
            android:textColor="@color/purple_700"
            android:layout_centerHorizontal="true"
            android:text="@string/verify_account"
            android:textSize="20dp" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_below="@+id/otp_account"
            android:fontFamily="@font/cairo_sembold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/otp_label"
            android:text="@string/enter_sms_otp"
            android:textSize="16dp" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/otp_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="4"
          android:layout_centerVertical="true"
            android:layoutDirection="ltr"
            android:textIsSelectable="false"
            android:textSize="20dp"
            app:pinBackgroundIsSquare="true"
            app:pinLineColors="@color/colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/not_receving"
            android:fontFamily="@font/cairo_sembold"/>

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14dp"
            android:text="@string/resend_otp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairo_sembold"/>

    </LinearLayout>

</RelativeLayout>
