<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/relTool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/imgFl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
            android:backgroundTint="@color/white"
            android:rotation="180" />

        <TextView
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imgFl"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_sembold"
            android:text="@string/aboutUs"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relTool"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp">
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:background="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/cairo_sembold"
            android:justificationMode="inter_word"
            android:text="@string/aboutText"
            android:textAlignment="textStart"
            android:textColor="@color/textSecondary"
            android:textSize="14dp" />

        <TextView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/cairo_sembold"
            android:justificationMode="inter_word"
            android:text="@string/aboutText2"
            android:textAlignment="textStart"
            android:textColor="@color/textSecondary"
            android:textSize="14dp" />

        <Button
            android:id="@+id/shareAbout"
            android:text="@string/share"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:fontFamily="@font/cairo_bold"
            android:layout_height="45dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>