<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    tools:context=".views.OrderFragment">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirm"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phoneHoled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cairo_sembold"
                    android:text="Phone"
                    android:textSize="12dp"
                    android:textColor="@color/purple_700"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:fontFamily="@font/cairo_sembold"
                    android:hint="@string/other_phone_optional"
                    android:inputType="phone"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:fontFamily="@font/cairo_sembold"
                    android:hint="@string/note"
                    android:inputType="textPersonName"
                    android:lineSpacingMultiplier="0.7"
                    android:padding="5dp" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/textSecondary"
                        android:drawableStart="@drawable/ic_baseline_location_on_24"
                        android:fontFamily="@font/cairo_bold"
                        android:padding="10dp"
                        android:text="@string/get_location"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/liveAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:fontFamily="@font/cairo_bold"
                        android:textColor="@color/purple_700"
                        android:textSize="12dp" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/purple_700"
                        android:clickable="true"
                        android:fontFamily="@font/cairo_bold"
                        android:padding="10dp"
                        android:text="@string/get_custom_location"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/liveLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:visibility="visible"></LinearLayout>

                <LinearLayout
                    android:id="@+id/customLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <EditText
                        android:id="@+id/editTextCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_edittext"
                        android:fontFamily="@font/cairo_sembold"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:padding="5dp" />

                    <EditText
                        android:id="@+id/editTextStreet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_edittext"
                        android:ems="10"
                        android:fontFamily="@font/cairo_sembold"
                        android:hint="@string/street"
                        android:inputType="text"
                        android:padding="5dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/confirm"
        android:drawableStart="@drawable/ic_checked"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/cairo_bold"
        android:text="@string/confirm_order"
        android:textSize="14dp"
        android:textColor="@color/white" />
</RelativeLayout>



</layout>