<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.SetPassword">
    <RelativeLayout
        android:id="@+id/relTool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/imgFl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
            android:backgroundTint="@color/white"
            android:rotation="180" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imgFl"
            android:fontFamily="@font/cairo_sembold"
            android:text="@string/set_pass"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/firstRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relTool"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/newPasswordSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_700"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPasswordnew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/cairo_sembold"
                android:hint="@string/new_passward"
                android:inputType="textPassword"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/rePasswordSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPasswordSet"
            android:layout_marginTop="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/purple_700"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPasswordre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/cairo_sembold"
                android:hint="@string/re_passward"
                android:inputType="textPassword"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="50dp"
        android:layout_below="@+id/firstRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btnSetPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/purple_700"
            android:fontFamily="@font/cairo_sembold"
            android:layout_centerHorizontal="true"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </RelativeLayout>

</RelativeLayout>