<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relTool"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/imgFl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
            android:backgroundTint="@color/white"
            android:rotation="180" />

        <TextView
            android:layout_toEndOf="@+id/imgFl"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/cairo_sembold"
            android:text="@string/help"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </RelativeLayout>
<RelativeLayout
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_sembold"
            android:text="@string/to_report_any_suggestions_and_complaints_please_contact_us"
            android:textAlignment="center"
            android:textColor="#373636"
            android:textSize="14dp" />

        <RelativeLayout
            android:id="@+id/callDiscount"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="#66af01">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/call_us"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_phone_call"
                android:backgroundTint="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sendMessage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:background="#7DC31B">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/send_message"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:background="@drawable/ic_paper_plane"
                android:backgroundTint="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>
